[PSS-115] resolved the feedback and added mapping for point of sales. Also reformatted the code to some extent.